# drone

./: CMakeLists.txt  README.md  startApp.sh  startUT.sh
doc/: Structure_Of_Component_And_UseCase.drawio  analyse.md  delivery.drawio  sdd.md  srs.md  userGuide.md
poc/: CMakeLists.txt  Event.h.txt  POC.docx
poc/Logger/: CMakeLists.txt
src/: CMakeLists.txt
src/application/: CMakeLists.txt  DeliveryCenter.cpp  DeliveryCenter.h  Drone.cpp  Drone.h  UserInterface.cpp  UserInterface.h  main.cpp
src/middeleware/: CMakeLists.txt  Location.h  Package.h  config.h  defines.h  prj_math.h
src/middeleware/Battery/: Battery.cpp  Battery.h  CMakeLists.txt
src/middeleware/Logger/: Logger.cpp  Logger.h
tests/: CMakeLists.txt  main.cpp  test_runner.h
